--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,3 +15,17 @@
     --destructive-foreground: 210 40% 98%;
   }
 }
+
+.spinning-icon {
+  display: inline-block;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
